Change file name for build packages workflow
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -49,6 +49,7 @@ jobs:
       matrix:
         type: [agent, manager]
         arch : [x86_64, i386]
+      fail-fast: false
     steps:
       - uses: actions/checkout@v3
 
