Run upload images worflow when changed
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/upload-package-creation-images.yml
+++ b/.github/workflows/upload-package-creation-images.yml
@@ -3,6 +3,7 @@ on:
   pull_request:
     paths:
       - 'rpms/CentOS/*'
+      - '.github/workflows/upload-package-creation-images.yml'
   workflow_dispatch:
 
 jobs:
