Add cancel of last runs for test install
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/test-install-and-enable-rpm.yml
+++ b/.github/workflows/test-install-and-enable-rpm.yml
@@ -8,6 +8,15 @@ on:
   workflow_dispatch:
 
 jobs:
+  Cancel-previous-runs:
+    name: 'Cancel Previous Runs'
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+    steps:
+      - uses: styfle/cancel-workflow-action
+        with:
+          workflow_id: ${{ github.run_id }}
+
   Test-install-and-enable-rpm-systems:
     runs-on: ubuntu-latest
     strategy:
