--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ${PACKAGE_NAME_${{ matrix.arch }}_${{ matrix.type }}}
-          path: ./rpms/output/${PACKAGE_NAME_${{ matrix.arch }}_${{ matrix.type }}}
+          path: ${{github.workspace}}/rpms/output/${PACKAGE_NAME_${{ matrix.arch }}_${{ matrix.type }}}
 
   Wazuh-agent-rpm-package-builds-x86_64-i386:
     runs-on: ubuntu-latest
@@ -49,7 +49,6 @@ jobs:
       matrix:
         type: [agent, manager]
         arch : [x86_64, i386]
-      fail-fast: false
     steps:
       - uses: actions/checkout@v3
 
@@ -63,4 +62,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ${PACKAGE_NAME_${{ matrix.arch }}_${{ matrix.type }}}
-          path: ./rpms/output/${PACKAGE_NAME_${{ matrix.arch }}_${{ matrix.type }}}
+          path: ${{github.workspace}}/rpms/output/${PACKAGE_NAME_${{ matrix.arch }}_${{ matrix.type }}}
