--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -56,10 +56,10 @@ jobs:
         working-directory: ./rpms
         run: |
           bash generate_rpm_package.sh -b master -t ${{ matrix.type }} -a ${{ matrix.arch }} --dev
-          echo "{PACKAGE_NAME_${{ matrix.arch }}_${{ matrix.type }}}=$(ls ./output | grep .rpm | head -n 1)" >> $GITHUB_ENV
+          echo "PACKAGE_NAME=$(ls ./output | grep .rpm | head -n 1)" >> $GITHUB_ENV
 
       - name: Upload Wazuh ${{ matrix.type }} ${{ matrix.arch }} package as artifact
         uses: actions/upload-artifact@v2
         with:
-          name: ${PACKAGE_NAME_${{ matrix.arch }}_${{ matrix.type }}}
-          path: ${{github.workspace}}/rpms/output/${PACKAGE_NAME_${{ matrix.arch }}_${{ matrix.type }}}
+          name: ${PACKAGE_NAME}
+          path: ${{github.workspace}}/rpms/output/${PACKAGE_NAME}
