--- a/.github/workflows/upload-package-creation-images.yml
+++ b/.github/workflows/upload-package-creation-images.yml
@@ -25,7 +25,7 @@ jobs:
         uses: pmorelli92/github-container-registry-build-push@2.0.0
         with:
           github-push-secret: ${{secrets.GITHUB_TOKEN}}
-          docker-image-name: ${{ matrix.image.CONTAINER_NAME }}
+          docker-image-name: ${{ matrix.image.CONTAINER_NAME }}_${{github.branch}}
           docker-image-tag: latest
           dockerfile-path: ./${{ matrix.image.DOCKERFILE_PATH }}/Dockerfile
           build-context: ./${{ matrix.image.DOCKERFILE_PATH }}
