Change the building and upload of images to be done with a script
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         type: [agent, manager]
-        arch : [aarch64, armv7]
+        arch : [aarch64, armv7, ppc64le]
         distro: [ubuntu18.04, alpine_latest]
         exclude:
           - arch: armv7
