Install docker on rare architecture containers to build image for package creation
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/upload-package-creation-images.yml
+++ b/.github/workflows/upload-package-creation-images.yml
@@ -40,4 +40,5 @@ jobs:
           arch: ${{ matrix.image.ARCHITECTURE }}
           distro: ${{ matrix.image.DISTRO }}
           run:
+            bash $GITHUB_WORKSPACE/.github/actions/common-tools/install_docker_on_ubuntu.sh
             bash $GITHUB_WORKSPACE/.github/actions/common-tools/build_and_push_image_to_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ matrix.image.CONTAINER_NAME }}_${{github.ref_name}} ./${{ matrix.image.DOCKERFILE_PATH }}
