--- a/.github/workflows/upload-package-creation-images.yml
+++ b/.github/workflows/upload-package-creation-images.yml
@@ -44,6 +44,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set image name
+        run: |
+          if [[ -n ${{github.base_ref}} ]]; then IMAGE_NAME=${{ matrix.image.CONTAINER_NAME }}_${{github.base_ref}}; else IMAGE_NAME=${{ matrix.image.CONTAINER_NAME }}_${{github.ref_name}}; fi
+          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+
       - uses: uraimo/run-on-arch-action@v2.5.0
         name: Build and push image $IMAGE_NAME to Github Container Registry
         with:
