--- a/.github/workflows/upload-package-creation-images.yml
+++ b/.github/workflows/upload-package-creation-images.yml
@@ -53,11 +53,29 @@ jobs:
           arch: ${{ matrix.image.ARCHITECTURE }}
           distro: ${{ matrix.image.DISTRO }}
           githubToken: ${{ secrets.GITHUB_TOKEN }}
-          dockerRunArgs: --volume /var/run/docker.sock:/var/run/docker.sock
-          env:
-            TAG: ${{ env.TAG }}
+          dockerRunArgs: |
+            --volume /var/run/docker.sock:/var/run/docker.sock
+            --volume $GITHUB_WORKSPACE:/github/workspace
+          env: |
+            TAG: $TAG
+            GITHUB_WORKSPACE: "/github/workspace"
           install: |
-            bash $GITHUB_WORKSPACE/.github/actions/common-tools/setup_docker.sh
-            cp $GITHUB_WORKSPACE/rpms/build.sh $GITHUB_WORKSPACE/${{ matrix.image.DOCKERFILE_PATH }}
+            case "${{ matrix.image.DISTRO }}" in 
+              ubuntu*)
+                apt-get update
+                apt-get install -y -q ca-certificates curl gnupg lsb-release apt-utils
+                mkdir -p /etc/apt/keyrings
+                curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+                echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+                apt-get update
+                apt-get install -y -q docker-ce docker-ce-cli containerd.io
+                ;;
+              alpine*)
+                apk -q update
+                apk -q add bash
+                apk -q add docker docker-compose
+                ;;
+              esac
           run: |
+            cp $GITHUB_WORKSPACE/rpms/build.sh $GITHUB_WORKSPACE/${{ matrix.image.DOCKERFILE_PATH }}
             bash $GITHUB_WORKSPACE/.github/actions/common-tools/build_and_push_image_to_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{matrix.image.CONTAINER_NAME}} ${{ matrix.image.DOCKERFILE_PATH }} $TAG
