--- a/.github/workflows/upload-package-creation-images.yml
+++ b/.github/workflows/upload-package-creation-images.yml
@@ -56,7 +56,7 @@ jobs:
           dockerRunArgs: |
             --volume /var/run/docker.sock:/var/run/docker.sock
           env: |
-            TAG: $TAG
+            TAG: ${{ env.TAG }}
           install: |
             case "${{ matrix.image.DISTRO }}" in 
               ubuntu*)
@@ -76,4 +76,5 @@ jobs:
               esac
           run: |
             cp $GITHUB_WORKSPACE/rpms/build.sh $GITHUB_WORKSPACE/${{ matrix.image.DOCKERFILE_PATH }}
-            bash $GITHUB_WORKSPACE/.github/actions/common-tools/build_and_push_image_to_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{matrix.image.CONTAINER_NAME}} ${{ matrix.image.DOCKERFILE_PATH }} $TAG
+            echo "TAG=$TAG"
+            bash $GITHUB_WORKSPACE/.github/actions/common-tools/build_and_push_image_to_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{matrix.image.CONTAINER_NAME}} ${{ matrix.image.DOCKERFILE_PATH }} ${TAG}
