--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Set tag as version
         run:
           if [ ! -z ${{ github.head_ref }} ]; then echo "TAG=${{ github.head_ref }}" >> $GITHUB_ENV; else echo "TAG=$(cat $GITHUB_WORKSPACE/VERSION)" >> $GITHUB_ENV ; fi
+          if [ ${{ matrix.arch }} == "x86_64" ]; then echo "CONTAINER_NAME=rpm_builder_x86" >> $GITHUB_ENV ; else echo "CONTAINER_NAME=${{ matrix.arch }}" >> $GITHUB_ENV ; fi
 
       - name: Download docker image for package building
         run:
@@ -56,13 +57,10 @@ jobs:
           echo "::set-output name=all::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
           echo "::set-output name=ts::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep .ts$ | xargs)"
 
-      - name: Set tag as version
-        run:
+      - name: Set tag and container name
+        run: |
           if [ ! -z ${{ github.head_ref }} && $(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs | grep 'rpms/CentOS')]; then echo "TAG=${{ github.head_ref }}" >> $GITHUB_ENV; else echo "TAG=$(cat $GITHUB_WORKSPACE/VERSION)" >> $GITHUB_ENV ; fi
-
-      - name: Download docker image for package building
-        run:
-          bash $GITHUB_WORKSPACE/.github/actions/common-tools/pull_image_from_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{matrix.image.CONTAINER_NAME}} ${{ matrix.image.DOCKERFILE_PATH }} 1626-fix-rhel9-derived-services
+          echo "CONTAINER_NAME=rpm_builder_${{ matrix.arch}}" >> $GITHUB_ENV
 
       - uses: uraimo/run-on-arch-action@v2.5.0
         name: Build the ${{ matrix.arch }} rpm Wazuh ${{ matrix.type }} package
@@ -74,6 +72,7 @@ jobs:
             --volume /var/run/docker.sock:/var/run/docker.sock
           env: |
             TAG: ${{ env.TAG }}
+            CONTAINER_NAME: ${{ env.CONTAINER_NAME }}
           install: |
             case "${{ matrix.image.DISTRO }}" in 
               ubuntu*)
@@ -92,7 +91,7 @@ jobs:
                 ;;
               esac
           run: |
-            bash $GITHUB_WORKSPACE/.github/actions/common-tools/pull_image_from_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{matrix.image.CONTAINER_NAME}} ${{ matrix.image.DOCKERFILE_PATH }} 1626-fix-rhel9-derived-services
+            bash $GITHUB_WORKSPACE/.github/actions/common-tools/pull_image_from_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{ env.CONTAINER_NAME }} 1626-fix-rhel9-derived-services
             bash $GITHUB_WORKSPACE/rpms/generate_rpm_package.sh -b master -t ${{ matrix.type }} -a ${{ matrix.arch }} --dev --dont-build-docker
             echo "PACKAGE_NAME_${{ matrix.arch }}_${{ matrix.type }}=$(ls ./output | grep .rpm | head -n 1)" >> $GITHUB_ENV
 
